# workshop_setup_check

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: AddUnitTestConfig.cmake  ExternalDependencies.cmake
empty_project_of_unit_test/: CMakeLists.txt  test_someothing.cpp
empty_project_with_main/: CMakeLists.txt  main.cpp
threading_test/: CMakeLists.txt  threading_test.cpp
workshop_utils/: CMakeLists.txt  blabber.cpp  profiling_guard.cpp  scope_print.cpp  splitter.cpp  test_blabber.cpp  test_profiling_guard.cpp  test_timestamp.cpp  test_type_info.cpp  test_workshop_utils_main.cpp  thread_utils.cpp  timestamp.cpp
workshop_utils/includes/: blabber.h  class_mobility.hpp  debug_type.hpp  except_blabber.hpp  profiled_print.h  profiling_guard.h  range_utils.h  scope_print.h  splitter.h  thread_utils.h  time_utils.h  timestamp.h
